--- a/.gitignore
+++ b/.gitignore
@@ -619,6 +619,7 @@ coverage*.info
 FodyWeavers.xsd
 
 # VS Code files for those working on multiple tools
+.vscode
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
