--- a/config/config.json
+++ b/config/config.json
@@ -18,7 +18,7 @@
       "persistence_location": {
         "container_directory": "logs",
         "targetfile_name": [
-          "lb_system-"
+          "app_"
         ],
         "targetfile_extension": ".log"
       },
